correct_old_post_layout

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 layout: default
 title: Jeet
 ---
+<div>
+	<h2 style="font-family: 'WindSong', cursive;">jeet.Log</h2>
+</div>
+<hr>
 
 <div class="pagination">
   {% if paginator.previous_page %}
