correct_old_post_layout

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 layout: default
 title: Jeet
 ---
-<div>
-	<h2 style="font-family: 'WindSong', cursive;">jeet.Log</h2>
-</div>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=WindSong&display=swap" rel="stylesheet">
+<h2 style="font-family: 'WindSong', cursive; text-align: center;">jeet.Log</h2>
 <hr>
 
 <div class="pagination">
