correct_old_post_layout

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@ title: Jeet
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=WindSong&display=swap" rel="stylesheet">
-<h2 style="font-family: 'WindSong', cursive; text-align: center;">jeet.Log</h2>
-<hr>
+<h1 style="font-family: 'WindSong', cursive; text-align: center; font-size: 80px; color: rebeccapurple; ">jeet.Log</h1>
 
 <div class="pagination">
   {% if paginator.previous_page %}
