add_hits_to_pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@ title: Jeet
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=WindSong&display=swap" rel="stylesheet">
 <h1 style="font-family: 'WindSong', cursive; text-align: center; font-size: 50px; color: rebeccapurple; ">jeet.Log</h1>
+<p align="center">
 <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fjeet-majumdar.github.io%2Flive%2F%2F&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/></a>
+</p>
 <div class="pagination">
   {% if paginator.previous_page %}
     {% if paginator.page == 2 %}
