--- a/publications.html
+++ b/publications.html
@@ -1,10 +1,27 @@
 ---
 layout: page
 permalink: /publications/
-title: Projects
+title: Publications
 ---
 <div id="archives">
 
+  <div>
+    <span>More details of my research can be found at  
+        <a href="https://scholar.google.com/citations?hl=en&user=FQF2VEcAAAAJ" title="Google Scholar" rel="external nofollow noopener" target="_blank">
+            <i class="ai ai-google-scholar"></i>
+        </a> 
+        <a href="https://orcid.org/0000-0001-7291-2955" title="ORCID" rel="external nofollow noopener" target="_blank">
+          <i class="ai ai-orcid"></i>
+        </a>
+        <a href="https://www.researchgate.net/profile/Jeet-Majumdar/" title="ResearchGate" rel="external nofollow noopener" target="_blank">
+          <i class="ai ai-researchgate"></i>
+        </a> 
+    </span> 
+  </div>
+  <br>
+  <hr>
+  <br>
   
+
 
 </div>
