--- a/publications.html
+++ b/publications.html
@@ -6,22 +6,21 @@ title: Publications
 <div id="archives">
 
   <div>
-    <span>More details of my research can be found at  
+    <span>You can also find my articles on:   
         <a href="https://scholar.google.com/citations?hl=en&user=FQF2VEcAAAAJ" title="Google Scholar" rel="external nofollow noopener" target="_blank">
-            <i class="ai ai-google-scholar"></i>
+            <i class="ai ai-google-scholar">Google Scholar</i>
         </a> 
         <a href="https://orcid.org/0000-0001-7291-2955" title="ORCID" rel="external nofollow noopener" target="_blank">
-          <i class="ai ai-orcid"></i>
+          <i class="ai ai-orcid">ORCID</i>
         </a>
         <a href="https://www.researchgate.net/profile/Jeet-Majumdar/" title="ResearchGate" rel="external nofollow noopener" target="_blank">
-          <i class="ai ai-researchgate"></i>
+          <i class="ai ai-researchgate">Research Gate</i>
         </a> 
     </span> 
   </div>
   <br>
   <hr>
   <br>
-  
 
 
 </div>
