publication card test

--- a/publications.html
+++ b/publications.html
@@ -5,22 +5,38 @@ title: Publications
 ---
 <div id="archives">
 
-  <div>
-    <span>You can also find my articles on:   
-        <a href="https://scholar.google.com/citations?hl=en&user=FQF2VEcAAAAJ" title="Google Scholar" rel="external nofollow noopener" target="_blank">
-            <i class="ai ai-google-scholar">Google Scholar</i>
-        </a> 
-        <a href="https://orcid.org/0000-0001-7291-2955" title="ORCID" rel="external nofollow noopener" target="_blank">
-          <i class="ai ai-orcid">ORCID</i>
-        </a>
-        <a href="https://www.researchgate.net/profile/Jeet-Majumdar/" title="ResearchGate" rel="external nofollow noopener" target="_blank">
-          <i class="ai ai-researchgate">Research Gate</i>
-        </a> 
-    </span> 
-  </div>
-  <br>
-  <hr>
-  <br>
+    <div>
+        <span>You can also find my articles on:
+            <a href="https://scholar.google.com/citations?hl=en&user=FQF2VEcAAAAJ" title="Google Scholar"
+                rel="external nofollow noopener" target="_blank">
+                <i class="ai ai-google-scholar"></i>
+            </a>
+            <a href="https://orcid.org/0000-0001-7291-2955" title="ORCID" rel="external nofollow noopener"
+                target="_blank">
+                <i class="ai ai-orcid"></i>
+            </a>
+            <a href="https://www.researchgate.net/profile/Jeet-Majumdar/" title="ResearchGate"
+                rel="external nofollow noopener" target="_blank">
+                <i class="ai ai-researchgate"></i>
+            </a>
+        </span>
+    </div>
+    <br>
+    <hr>
+    <br>
 
+    <div class="card">
+        <img decoding="async"
+            src="https://pubs.acs.org/cms/10.1021/acs.jpcb.1c02266/asset/images/medium/jp1c02266_0014.gif"
+            class="card-img-top" alt="Bootstrap 5 card image left demo image">
+        <div class="card-body">
+            <h5 class="card-title">Card Title</h5>
+            <p class="card-text">
+                Some quick example text to build on the card title and make up the
+                bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div>
 
 </div>
