--- a/publications.html
+++ b/publications.html
@@ -5,6 +5,8 @@ title: Publications
 ---
 <div id="archives">
 
+    <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
+
     <div>
         <span>You can also find my articles on:
             <a href="https://scholar.google.com/citations?hl=en&user=FQF2VEcAAAAJ" title="Google Scholar"
@@ -25,17 +27,24 @@ title: Publications
     <hr>
     <br>
 
-    <div class="card">
-        <img decoding="async"
-            src="https://pubs.acs.org/cms/10.1021/acs.jpcb.1c02266/asset/images/medium/jp1c02266_0014.gif"
-            class="card-img-top" alt="Bootstrap 5 card image left demo image">
-        <div class="card-body">
-            <h5 class="card-title">Card Title</h5>
-            <p class="card-text">
-                Some quick example text to build on the card title and make up the
-                bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+    <!-- <publication>-->
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="https://pubs.acs.org/cms/10.1021/acs.jpcb.1c02266/asset/images/medium/jp1c02266_0014.gif" class="img-fluid rounded-start" 
+            alt="Dielectric Profile and Electromelting of a Monolayer of Water Confined in Graphene Slit Pore">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">
+                <a href="https://doi.org/10.1021/acs.jpcb.1c02266">
+                    Dielectric Profile and Electromelting of a Monolayer of Water Confined in Graphene Slit Pore
+                </a>
+              </h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text"><small class="text-muted">J. Phys. Chem. B 2021, 125, 24, 6670-6680</small></p>
+            </div>
+          </div>
         </div>
     </div>
 
