--- a/publications.html
+++ b/publications.html
@@ -43,6 +43,7 @@ title: Publications
               </h5>
               <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
               <p class="card-text"><small class="text-muted">J. Phys. Chem. B 2021, 125, 24, 6670-6680</small></p>
+              <div class='altmetric-embed' data-doi='10.1021/acs.jpcb.1c02266'></div>
             </div>
           </div>
         </div>
