--- a/publications.html
+++ b/publications.html
@@ -37,7 +37,7 @@ title: Publications
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title">
-                <a href="https://doi.org/10.1021/acs.jpcb.1c02266">
+                <a href="https://doi.org/10.1021/acs.jpcb.1c02266" target="_blank">
                     Dielectric Profile and Electromelting of a Monolayer of Water Confined in Graphene Slit Pore
                 </a>
               </h5>
