--- a/publications.html
+++ b/publications.html
@@ -30,22 +30,55 @@ title: Publications
     <!-- <publication>-->
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row g-0">
-          <div class="col-md-4">
-            <img src="https://pubs.acs.org/cms/10.1021/acs.jpcb.1c02266/asset/images/medium/jp1c02266_0014.gif" class="img-fluid rounded-start" 
-            alt="Dielectric Profile and Electromelting of a Monolayer of Water Confined in Graphene Slit Pore">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">
-                <a href="https://doi.org/10.1021/acs.jpcb.1c02266" target="_blank">
-                    Dielectric Profile and Electromelting of a Monolayer of Water Confined in Graphene Slit Pore
-                </a>
-              </h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <p class="card-text"><small class="text-muted">J. Phys. Chem. B 2021, 125, 24, 6670-6680</small></p>
-              <div data-badge-popover="top" data-badge-type="1" data-doi="10.1021/acs.jpcb.1c02266" data-hide-no-mentions="true" class="altmetric-embed"></div>
+            <div class="col-md-4">
+                <img src="https://pubs.acs.org/cms/10.1021/acs.jpcb.1c02266/asset/images/medium/jp1c02266_0014.gif"
+                    class="img-fluid rounded-start"
+                    alt="Dielectric Profile and Electromelting of a Monolayer of Water Confined in Graphene Slit Pore">
             </div>
-          </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <a href="https://doi.org/10.1021/acs.jpcb.1c02266" target="_blank">
+                            Dielectric Profile and Electromelting of a Monolayer of Water Confined in Graphene Slit Pore
+                        </a>
+                    </h5>
+                    <p class="card-text">
+                        The study investigates the structure, dielectric properties and electromelting of water confined between graphene sheets using molecular dynamics simulations. 
+                        Six nonpolarizable water models were considered, affecting the dielectric profile and electromelting behavior. 
+                    </p>
+                    <p class="card-text"><small class="text-muted">J. Phys. Chem. B 2021, 125, 24, 6670-6680</small></p>
+                    <div data-badge-popover="top" data-badge-type="1" data-doi="10.1021/acs.jpcb.1c02266"
+                        data-hide-no-mentions="true" class="altmetric-embed"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- <publication>-->
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="{{site.baseurl}}/assets/img/publications/does_twist_angle.jpeg"
+                    class="img-fluid rounded-start"
+                    alt="Does twist angle affect the properties of water confined inside twisted bilayer graphene">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <a href="https://doi.org/10.1063/5.0139256" target="_blank">
+                            Does twist angle affect the properties of water confined inside twisted bilayer graphene?
+                        </a>
+                    </h5>
+                    <p class="card-text">
+                        The study explore the effects of rotational misalignment between graphene sheets on the properties of confined water, 
+                        finding that small angular misalignments do not significantly impair dielectric properties but can affect water dynamics.
+                    </p>
+                    <p class="card-text"><small class="text-muted">J. Chem. Phys. 158, 034501 (2023)</small></p>
+                    <div data-badge-popover="top" data-badge-type="1" data-doi="10.1063/5.0139256"
+                        data-hide-no-mentions="true" class="altmetric-embed"></div>
+                </div>
+            </div>
         </div>
     </div>
 
