--- a/publications.html
+++ b/publications.html
@@ -82,4 +82,32 @@ title: Publications
         </div>
     </div>
 
+
+    <!-- <publication>-->
+        <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="{{site.baseurl}}/assets/img/publications/methanol_on_kbr.jpeg"
+                        class="img-fluid rounded-start"
+                        alt="Influence of the substrate on the density and infrared spectra of the adsorbed methanol ice of different thicknesses using molecular dynamics simulation">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <a href="https://doi.org/10.1093/mnras/stad1184" target="_blank">
+                                Influence of the substrate on the density and infrared spectra of the adsorbed methanol ice of different thicknesses using molecular dynamics simulation
+                            </a>
+                        </h5>
+                        <p class="card-text">
+                            The article discusses the influence of substrates on the density and infrared spectra of adsorbed methanol ice using molecular dynamics simulations. 
+                            It highlights the importance of methanol in astrochemistry, its detection through infrared spectra, and the role of substrates like KBr in affecting its properties.
+                        </p>
+                        <p class="card-text"><small class="text-muted">Monthly Notices of the Royal Astronomical Society, 522(3), 3656-3664.</small></p>
+                        <div data-badge-popover="top" data-badge-type="1" data-doi="10.1093/mnras/stad1184"
+                            data-hide-no-mentions="true" class="altmetric-embed"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 </div>
