--- a/publications.html
+++ b/publications.html
@@ -56,7 +56,7 @@ title: Publications
 
 
     <!-- <publication>-->
-    <div class="card mb-3" style="max-width: 540px; border-color:cornflowerblue;">
+    <div class="card mb-3" style="max-width: 540px; border: 1px solid; padding: 10px; box-shadow: 5px 10px #a3a3a3">
         <div class="row g-0">
             <div class="col-md-4">
                 <img src="{{site.baseurl}}/assets/img/publications/does_twist_angle.jpeg"
