--- a/publications.html
+++ b/publications.html
@@ -31,6 +31,38 @@ title: Publications
     <div class="card mb-3" style="max-width: 540px; border: 1px solid; padding: 10px; box-shadow: 5px 6px #a3a3a3">
         <div class="row g-0">
             <div class="col-md-4">
+                <img src="{{site.baseurl}}/assets/img/publications/methanol_on_kbr.jpeg" class="img-fluid rounded-start"
+                    alt="Influence of the substrate on the density and infrared spectra of the adsorbed methanol ice of different thicknesses using molecular dynamics simulation">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <a href="https://doi.org/10.1093/mnras/stad1184" target="_blank">
+                            Influence of the substrate on the density and infrared spectra of the adsorbed methanol ice
+                            of different thicknesses using molecular dynamics simulation
+                        </a>
+                    </h5>
+                    <p class="card-text">
+                        The article discusses the influence of substrates on the density and infrared spectra of
+                        adsorbed methanol ice using molecular dynamics simulations.
+                        It highlights the importance of methanol in astrochemistry, its detection through infrared
+                        spectra, and the role of substrates like KBr in affecting its properties.
+                    </p>
+                    <p class="card-text"><small class="text-muted">Monthly Notices of the Royal Astronomical Society,
+                            522(3), 3656-3664.</small></p>
+                    <div data-badge-popover="top" data-badge-type="1" data-doi="10.1093/mnras/stad1184"
+                        data-hide-no-mentions="true" class="altmetric-embed"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br>
+
+    <!-- <publication>-->
+    <div class="card mb-3" style="max-width: 540px; border: 1px solid; padding: 10px; box-shadow: 5px 6px #a3a3a3">
+        <div class="row g-0">
+            <div class="col-md-4">
                 <img src="https://pubs.acs.org/cms/10.1021/acs.jpcb.1c02266/asset/images/medium/jp1c02266_0014.gif"
                     class="img-fluid rounded-start"
                     alt="Dielectric Profile and Electromelting of a Monolayer of Water Confined in Graphene Slit Pore">
@@ -43,8 +75,10 @@ title: Publications
                         </a>
                     </h5>
                     <p class="card-text">
-                        The study investigates the structure, dielectric properties and electromelting of water confined between graphene sheets using molecular dynamics simulations. 
-                        Six nonpolarizable water models were considered, affecting the dielectric profile and electromelting behavior. 
+                        The study investigates the structure, dielectric properties and electromelting of water confined
+                        between graphene sheets using molecular dynamics simulations.
+                        Six nonpolarizable water models were considered, affecting the dielectric profile and
+                        electromelting behavior.
                     </p>
                     <p class="card-text"><small class="text-muted">J. Phys. Chem. B 2021, 125, 24, 6670-6680</small></p>
                     <div data-badge-popover="top" data-badge-type="1" data-doi="10.1021/acs.jpcb.1c02266"
@@ -55,7 +89,7 @@ title: Publications
     </div>
 
     <br>
-    
+
     <!-- <publication>-->
     <div class="card mb-3" style="max-width: 540px; border: 1px solid; padding: 10px; box-shadow: 5px 6px #a3a3a3">
         <div class="row g-0">
@@ -72,8 +106,10 @@ title: Publications
                         </a>
                     </h5>
                     <p class="card-text">
-                        The study explore the effects of rotational misalignment between graphene sheets on the properties of confined water, 
-                        finding that small angular misalignments do not significantly impair dielectric properties but can affect water dynamics.
+                        The study explore the effects of rotational misalignment between graphene sheets on the
+                        properties of confined water,
+                        finding that small angular misalignments do not significantly impair dielectric properties but
+                        can affect water dynamics.
                     </p>
                     <p class="card-text"><small class="text-muted">J. Chem. Phys. 158, 034501 (2023)</small></p>
                     <div data-badge-popover="top" data-badge-type="1" data-doi="10.1063/5.0139256"
@@ -83,32 +119,7 @@ title: Publications
         </div>
     </div>
 
+    <br>
 
-    <!-- <publication>-->
-        <div class="card mb-3" style="max-width: 540px; border: 1px solid; padding: 10px; box-shadow: 5px 6px #a3a3a3">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img src="{{site.baseurl}}/assets/img/publications/methanol_on_kbr.jpeg"
-                        class="img-fluid rounded-start"
-                        alt="Influence of the substrate on the density and infrared spectra of the adsorbed methanol ice of different thicknesses using molecular dynamics simulation">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            <a href="https://doi.org/10.1093/mnras/stad1184" target="_blank">
-                                Influence of the substrate on the density and infrared spectra of the adsorbed methanol ice of different thicknesses using molecular dynamics simulation
-                            </a>
-                        </h5>
-                        <p class="card-text">
-                            The article discusses the influence of substrates on the density and infrared spectra of adsorbed methanol ice using molecular dynamics simulations. 
-                            It highlights the importance of methanol in astrochemistry, its detection through infrared spectra, and the role of substrates like KBr in affecting its properties.
-                        </p>
-                        <p class="card-text"><small class="text-muted">Monthly Notices of the Royal Astronomical Society, 522(3), 3656-3664.</small></p>
-                        <div data-badge-popover="top" data-badge-type="1" data-doi="10.1093/mnras/stad1184"
-                            data-hide-no-mentions="true" class="altmetric-embed"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
 </div>
