--- a/publications.html
+++ b/publications.html
@@ -8,7 +8,9 @@ title: Publications
     <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
 
     <div>
-        <span>You can also find my articles on:
+        <p>You can also find my articles on:
+        </p>
+        <p>
             <a href="https://scholar.google.com/citations?hl=en&user=FQF2VEcAAAAJ" title="Google Scholar"
                 rel="external nofollow noopener" target="_blank">
                 <i class="ai ai-google-scholar"></i>
@@ -21,7 +23,7 @@ title: Publications
                 rel="external nofollow noopener" target="_blank">
                 <i class="ai ai-researchgate"></i>
             </a>
-        </span>
+        </p>
     </div>
     <br>
     <hr>
