update publication format

--- a/publications.html
+++ b/publications.html
@@ -49,7 +49,9 @@ title: Publications
                         It highlights the importance of methanol in astrochemistry, its detection through infrared
                         spectra, and the role of substrates like KBr in affecting its properties.
                     </p>
-                    <p class="card-text"><small class="text-muted">Monthly Notices of the Royal Astronomical Society,
+                    <p class="card-text">
+                        <strong>2023</strong>
+                        <small class="text-muted">Monthly Notices of the Royal Astronomical Society,
                             522(3), 3656-3664.</small></p>
                     <div data-badge-popover="top" data-badge-type="1" data-doi="10.1093/mnras/stad1184"
                         data-hide-no-mentions="true" class="altmetric-embed"></div>
