--- a/assets/files/Code_Java.html
+++ b/assets/files/Code_Java.html
@@ -105,6 +105,11 @@
 <li><strong><code>remove(key)</code>:</strong> Removes the mapping for the specified key if present.</li>
 <li><strong><code>size()</code>:</strong> Returns the number of key-value pairs in the map.</li>
 <li><strong><code>values()</code>:</strong> Returns a collection of all values in the map.</li>
+<li>
+<ul>
+<li><strong><code>getOrDefault(key, default_value)</code>:</strong> used to get the value mapped with specified key. If no value is mapped with the provided key then the default value is returned.</li>
+</ul>
+</li>
 </ul>
 <h3 id="specific-implementations">Specific Implementations</h3>
 <p><strong>HashMap:</strong></p>
