add publication image locally for first paper
Dielectric profile and electromelting  in confined water

--- a/publications.html
+++ b/publications.html
@@ -96,7 +96,7 @@ title: Publications
     <div class="card mb-3" style="max-width: 540px; border: 1px solid; padding: 10px; box-shadow: 5px 6px #a3a3a3">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="https://pubs.acs.org/cms/10.1021/acs.jpcb.1c02266/asset/images/medium/jp1c02266_0014.gif"
+                <img src="{{site.baseurl}}/assets/img/publications/dielectric_profile_electromelting.jpg"
                     class="img-fluid rounded-start"
                     alt="Dielectric Profile and Electromelting of a Monolayer of Water Confined in Graphene Slit Pore">
             </div>
