update publication page with new mos2 work

--- a/publications.html
+++ b/publications.html
@@ -32,6 +32,39 @@ title: Publications
     <div class="card mb-3" style="max-width: 540px; border: 1px solid; padding: 10px; box-shadow: 5px 6px #a3a3a3">
         <div class="row g-0">
             <div class="col-md-4">
+                <img src="{{site.baseurl}}/assets/img/publications/mos2_vs_graphene.jpg"
+                    class="img-fluid rounded-start"
+                    alt="Dielectric Profile and Electromelting of a Monolayer of Water Confined in Graphene Slit Pore">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        <a href="https://doi.org/10.1039/d4nr03821e" target="_blank">
+                            Similar structure but different thermodynamic, dielectric, and frictional properties of confined water 
+                            in twisted 2D materials: MoS<sub>2</sub> vs. graphene
+                        </a>
+                    </h5>
+                    <p class="card-text">
+                        A study comparing water confined within bilayer MoS<sub>2</sub> and graphene nanochannels found similar 
+                        water structures but distinct properties. Water experiences a more favorable environment in MoS<sub>2</sub>, 
+                        which also exhibits a lower dielectric constant and a static friction coefficient that, unlike in graphene, 
+                        doesn't dramatically reduce under confinement. Thus, despite structural similarities, the confining material 
+                        significantly impacts nanoconfined water's properties.
+                    </p>
+                    <p class="card-text"><small class="text-muted">J. Phys. Chem. B 2021, 125, 24, 6670-6680</small></p>
+                    <div data-badge-popover="top" data-badge-type="1" data-doi="10.1021/acs.jpcb.1c02266"
+                        data-hide-no-mentions="true" class="altmetric-embed"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <br>
+
+    <!-- <publication>-->
+    <div class="card mb-3" style="max-width: 540px; border: 1px solid; padding: 10px; box-shadow: 5px 6px #a3a3a3">
+        <div class="row g-0">
+            <div class="col-md-4">
                 <img src="{{site.baseurl}}/assets/img/publications/methanol_on_kbr.jpeg" class="img-fluid rounded-start"
                     alt="Influence of the substrate on the density and infrared spectra of the adsorbed methanol ice of different thicknesses using molecular dynamics simulation">
             </div>
@@ -51,7 +84,8 @@ title: Publications
                     </p>
                     <p class="card-text">
                         <small class="text-muted">Monthly Notices of the Royal Astronomical Society,
-                            522(3), 3656-3664. (2023)</small></p>
+                            522(3), 3656-3664. (2023)</small>
+                    </p>
                     <div data-badge-popover="top" data-badge-type="1" data-doi="10.1093/mnras/stad1184"
                         data-hide-no-mentions="true" class="altmetric-embed"></div>
                 </div>
