--- a/publications.html
+++ b/publications.html
@@ -34,7 +34,8 @@ title: Publications
             <div class="col-md-4">
                 <img src="{{site.baseurl}}/assets/img/publications/mos2_vs_graphene.jpg"
                     class="img-fluid rounded-start"
-                    alt="Dielectric Profile and Electromelting of a Monolayer of Water Confined in Graphene Slit Pore">
+                    alt="Similar structure but different thermodynamic, dielectric, and frictional properties of confined water 
+                    in twisted 2D materials: MoS2 vs. graphene">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
