--- a/publications.html
+++ b/publications.html
@@ -52,8 +52,8 @@ title: Publications
                         doesn't dramatically reduce under confinement. Thus, despite structural similarities, the confining material 
                         significantly impacts nanoconfined water's properties.
                     </p>
-                    <p class="card-text"><small class="text-muted">J. Phys. Chem. B 2021, 125, 24, 6670-6680</small></p>
-                    <div data-badge-popover="top" data-badge-type="1" data-doi="10.1021/acs.jpcb.1c02266"
+                    <p class="card-text"><small class="text-muted">Nanoscale (2025)</small></p>
+                    <div data-badge-popover="top" data-badge-type="1" data-doi="10.1039/d4nr03821e"
                         data-hide-no-mentions="true" class="altmetric-embed"></div>
                 </div>
             </div>
