add margin in publication page to anchor tag

--- a/publications.html
+++ b/publications.html
@@ -12,7 +12,7 @@ title: Publications
         </p>
         <p>
             <a href="https://scholar.google.com/citations?hl=en&user=FQF2VEcAAAAJ" title="Google Scholar"
-                rel="external nofollow noopener" target="_blank">
+                rel="external nofollow noopener" target="_blank" style="margin-right: 25px;">
                 <i class="ai ai-google-scholar"></i>
             </a>
             <a href="https://orcid.org/0000-0001-7291-2955" title="ORCID" rel="external nofollow noopener"
