--- a/publications.html
+++ b/publications.html
@@ -12,15 +12,15 @@ title: Publications
         </p>
         <p>
             <a href="https://scholar.google.com/citations?hl=en&user=FQF2VEcAAAAJ" title="Google Scholar"
-                rel="external nofollow noopener" target="_blank" style="margin-right: 25px;">
+                rel="external nofollow noopener" target="_blank" style="margin-right: 25px; font-size: 2rem;">
                 <i class="ai ai-google-scholar"></i>
             </a>
             <a href="https://orcid.org/0000-0001-7291-2955" title="ORCID" rel="external nofollow noopener"
-                target="_blank">
+                target="_blank" style="margin-right: 25px; font-size: 2rem;">
                 <i class="ai ai-orcid"></i>
             </a>
             <a href="https://www.researchgate.net/profile/Jeet-Majumdar/" title="ResearchGate"
-                rel="external nofollow noopener" target="_blank">
+                rel="external nofollow noopener" target="_blank" style="margin-right: 25px; font-size: 2rem;">
                 <i class="ai ai-researchgate"></i>
             </a>
         </p>
